fix dark background z-index for zoomable imgs

--- a/src/zoomableImage.css
+++ b/src/zoomableImage.css
@@ -25,6 +25,7 @@ img.zoomed-out.loading {
     height: 100vh;
     top: 0;
     left: 0;
+    z-index: 10;
 }
 
 .zoomable-img-wrapper {
